--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,10 +70,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-compose:2.7.6'
 
     // Room Components
-    implementation 'androidx.room:room-runtime:2.6.1'
-    annotationProcessor' androidx.room:room-compiler:2.6.1'
-    implementation 'androidx.room:room-ktx:2.6.1'
-    kapt 'androidx.room:room-compiler:2.6.1'
+    implementation "androidx.room:room-runtime:2.6.1"
+    kapt "androidx.room:room-compiler:2.6.1"
+    implementation "androidx.room:room-ktx:2.6.1"
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -82,6 +81,7 @@ dependencies {
 
     // Paging
     implementation 'androidx.paging:paging-compose:3.3.0-alpha02'
+    implementation 'androidx.room:room-paging:2.6.1'
 
     // Datastore
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
