--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,9 +90,14 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.50'
     kapt 'com.google.dagger:hilt-android-compiler:2.50'
     kapt 'com.google.dagger:hilt-compiler:2.50'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.2.0-alpha01'
 
     // KotlinX Serialization
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.2'
+
+    // Foundation
+    implementation 'androidx.compose.foundation:foundation:1.5.4'
+
 
 }
 
